# sea-life-identification

./: .gitignore  README.md
sea-life-id-app/: .gitignore  .metadata  README.md  pubspec.yaml
sea-life-id-app/android/: .gitignore  build.gradle  settings.gradle.kts
sea-life-id-app/android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
sea-life-id-app/assets/lang/: en.json  fr.json
sea-life-id-app/graphics/: .gitignore
sea-life-id-app/ios/: Podfile
sea-life-id-app/ios/Runner/: Info.plist
sea-life-id-app/ios/Runner.xcodeproj/: project.pbxproj
sea-life-id-app/lib/: app_localizations.dart  firebase_options.dart  main.dart
sea-life-id-app/lib/models/: app_model.dart  app_model.g.dart  db_sample.dart  media_model.dart  media_model.g.dart
sea-life-id-app/lib/utils/: automatic_tagging_utils.dart  firebase_storage_utils.dart  isolate_inference.dart  ml_models.dart  tflite_interpreter.dart  video_utils.dart
sea-life-id-app/lib/widgets/: app_bar.dart  border_tab_indicator.dart  colored_tag.dart  custom_asset_giphy_dialog.dart  detection_problem_report_widget.dart  discover.dart  identify.dart  image_placeholder.dart  (+6 more)
sea-life-id-fine-tuning/: .gitignore  README.md  pyproject.toml
sea-life-id-fine-tuning/notebooks/: Dockerfile  sea-life-id-fine-tuning.ipynb
sea-life-id-fine-tuning/src/sea_life_id_fine_tuning/: analyze_dataset.py  finetune_model.py  main.py  prepare_dataset.py  run_inference.py  visualize_dataset.py
website/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
website/src/: app.postcss
(+8 files in other folders)
